--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-24 22:15+0000\n"
+"POT-Creation-Date: 2021-03-24 22:35+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Jesus EKIE <jesus@fehudigital.com>, 2020\n"
 "Language-Team: French (https://www.transifex.com/rapidpro/teams/226/fr/)\n"
@@ -6626,7 +6626,9 @@ msgstr "Compte Chatbase"
 msgid "Connected to Chatbase Account"
 msgstr "Connecté au compte Chatbase"
 
-msgid "Connect your Chatbase account"
+#, fuzzy
+#| msgid "Connect your Chatbase account"
+msgid "Connect your Chatbase account."
 msgstr "Connectez votre compte Chatbase"
 
 msgid "Connecting your Chatbase account will allow you to monitor your bot, fix broken experiences and better understand your users. To signup for an account, visit"
@@ -6692,14 +6694,16 @@ msgstr "Compte DT One"
 
 #, fuzzy
 #| msgid "Connected to Chatbase Account"
-msgid "Connected to a <b>DT One</b> account."
+msgid "Connected to your <b>DT One</b> account."
 msgstr "Connecté au compte Chatbase"
 
 msgid "Transfer Log"
 msgstr "Journal Transfert"
 
-msgid "No DT One account connected."
-msgstr "Aucun compte DT One connecté."
+#, fuzzy
+#| msgid "Connect your Chatbase account"
+msgid "Connect your DT One account."
+msgstr "Connectez votre compte Chatbase"
 
 #, fuzzy, python-format
 #| msgid "Adding a DT One account will allow you to send airtime credit for 400+ operators in over 100 countries. Once connected you can transfer airtime credit within your Flows. To signup for an account, visit"
@@ -6715,7 +6719,9 @@ msgstr ""
 msgid "Your account is connected to a DT One account."
 msgstr "Votre compte est connecté à un compte DT One"
 
-msgid "your DT One account. Doing so will cause the payment actions in your flows to no longer be processed."
+#, fuzzy, python-format
+#| msgid "your DT One account. Doing so will cause the payment actions in your flows to no longer be processed."
+msgid "If you no longer want it connected, you can <a href=\"%(disconnect_url)s\">disconnect</a> it. Doing so will cause the payment actions in your flows to no longer be processed."
 msgstr "votre compte DT One. Cela entraînera la fin du traitement des actions de paiement dans vos flux."
 
 msgid "Disconnect DT One"
@@ -7720,6 +7726,9 @@ msgstr "Entrez une requête"
 #, python-brace-format
 msgid "Found ${count} for ${query}"
 msgstr "${count} trouvé pour ${query}"
+
+#~ msgid "No DT One account connected."
+#~ msgstr "Aucun compte DT One connecté."
 
 #, python-format
 #~ msgid "Connecting to your DT One account failed with error text: %s"
