--- a/locale/en_US/LC_MESSAGES/django.po
+++ b/locale/en_US/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-24 22:15+0000\n"
+"POT-Creation-Date: 2021-03-24 22:35+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -6371,7 +6371,7 @@ msgstr ""
 msgid "Connected to Chatbase Account"
 msgstr ""
 
-msgid "Connect your Chatbase account"
+msgid "Connect your Chatbase account."
 msgstr ""
 
 msgid "Connecting your Chatbase account will allow you to monitor your bot, fix broken experiences and better understand your users. To signup for an account, visit"
@@ -6435,13 +6435,13 @@ msgstr ""
 msgid "DT One Account"
 msgstr ""
 
-msgid "Connected to a <b>DT One</b> account."
+msgid "Connected to your <b>DT One</b> account."
 msgstr ""
 
 msgid "Transfer Log"
 msgstr ""
 
-msgid "No DT One account connected."
+msgid "Connect your DT One account."
 msgstr ""
 
 #, python-format
@@ -6455,7 +6455,8 @@ msgstr ""
 msgid "Your account is connected to a DT One account."
 msgstr ""
 
-msgid "your DT One account. Doing so will cause the payment actions in your flows to no longer be processed."
+#, python-format
+msgid "If you no longer want it connected, you can <a href=\"%(disconnect_url)s\">disconnect</a> it. Doing so will cause the payment actions in your flows to no longer be processed."
 msgstr ""
 
 msgid "Disconnect DT One"
