--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-24 22:15+0000\n"
+"POT-Creation-Date: 2021-03-24 22:35+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Matheus Soares <matheus.soares@ilhasoft.com.br>, 2020\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/rapidpro/teams/226/pt_BR/)\n"
@@ -6599,7 +6599,9 @@ msgstr "Conta do Chatbase"
 msgid "Connected to Chatbase Account"
 msgstr "Conecte com uma conta Chatbase"
 
-msgid "Connect your Chatbase account"
+#, fuzzy
+#| msgid "Connect your Chatbase account"
+msgid "Connect your Chatbase account."
 msgstr "Conecte sua conta do Chatbase"
 
 msgid "Connecting your Chatbase account will allow you to monitor your bot, fix broken experiences and better understand your users. To signup for an account, visit"
@@ -6665,14 +6667,16 @@ msgstr "Conta DT One"
 
 #, fuzzy
 #| msgid "Connected to Chatbase Account"
-msgid "Connected to a <b>DT One</b> account."
+msgid "Connected to your <b>DT One</b> account."
 msgstr "Conecte com uma conta Chatbase"
 
 msgid "Transfer Log"
 msgstr "Transfer Log"
 
-msgid "No DT One account connected."
-msgstr "Nenhuma conta DT One conectada."
+#, fuzzy
+#| msgid "Connect your Chatbase account"
+msgid "Connect your DT One account."
+msgstr "Conecte sua conta do Chatbase"
 
 #, python-format
 msgid "Adding a DT One account will allow you to send airtime credit over 400+ operators in over 100 countries. Once connected you can transfer airtime credit within your flows. To signup for an account, visit %(link)s."
@@ -6687,7 +6691,9 @@ msgstr ""
 msgid "Your account is connected to a DT One account."
 msgstr "Sua conta está conectada a uma conta DT One"
 
-msgid "your DT One account. Doing so will cause the payment actions in your flows to no longer be processed."
+#, fuzzy, python-format
+#| msgid "your DT One account. Doing so will cause the payment actions in your flows to no longer be processed."
+msgid "If you no longer want it connected, you can <a href=\"%(disconnect_url)s\">disconnect</a> it. Doing so will cause the payment actions in your flows to no longer be processed."
 msgstr "Sua conta DT One.  Fazer isso fará com que as ações de pagamento em seus fluxos não sejam mais processadas."
 
 msgid "Disconnect DT One"
@@ -7604,6 +7610,9 @@ msgstr "Adicione uma dúvida"
 #, python-brace-format
 msgid "Found ${count} for ${query}"
 msgstr "Encontrado ${count} para ${query}"
+
+#~ msgid "No DT One account connected."
+#~ msgstr "Nenhuma conta DT One conectada."
 
 #, python-format
 #~ msgid "Connecting to your DT One account failed with error text: %s"
