--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-31 15:51+0000\n"
+"POT-Creation-Date: 2021-03-31 20:11+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -9315,21 +9315,21 @@ msgstr "Создать Учетную запись"
 msgid "Creating a %(brand)s account is free and only takes a minute."
 msgstr ""
 
-msgid "Remove SMTP configuration"
-msgstr "Удалить настройки SMTP"
-
 #, fuzzy, python-format
 #| msgid ""
 #| "\n"
 #| "      Emails sent from flows will come from <b>%(from_email)s</b>.\n"
 #| "\n"
 #| "    "
-msgid "Emails sent from flows will come from <b>%(from_email)s</b>."
+msgid "Emails sent from flows will be sent from <b>%(from_email)s</b>."
 msgstr ""
 "\n"
 "      Электронные письма, отправленные из потоков, будут приходить с <b>%(from_email)s</b>.\n"
 "\n"
 "    "
+
+msgid "Configure email settings to enable sending of emails from flows."
+msgstr ""
 
 #, fuzzy, python-format
 #| msgid ""
@@ -9338,7 +9338,7 @@ msgstr ""
 #| "      This will let you receive replies from your recipients.\n"
 #| "\n"
 #| "    "
-msgid "You can configure %(brand)s to send emails generated within flows from an email address of your choosing. <br/> This will let you receive replies from your recipients."
+msgid "You can configure %(brand)s to send emails generated within flows from an email address of your choosing."
 msgstr ""
 "\n"
 "      Вы можете настроить %(brand)s для отправки электронных писем, создаваемых в потоках, с адреса электронной почты по Вашему выбору. <br/>\n"
@@ -9352,19 +9352,24 @@ msgstr ""
 #| "        If you no longer want to use %(from_email)s to send emails, you can <a href='javascript:confirmSMTPRemove();'>remove your SMTP configuration</a>.\n"
 #| "\n"
 #| "      "
-msgid "If you no longer want to use %(from_email)s to send emails, you can <a href='javascript:confirmSMTPRemove();'>remove your SMTP configuration</a>."
+msgid "If you no longer want to use %(from_email)s to send emails, you can <a href='javascript:confirmSMTPRemove();'>remove your SMTP settings</a>."
 msgstr ""
 "\n"
 "        Если Вы больше не хотите использовать %(from_email)s для отправки электронных писем, Вы можете <a href='javascript:confirmSMTPRemove();'>удалить свои настройки SMTP</a>.\n"
 "\n"
 "      "
 
-#, fuzzy, python-format
+#, fuzzy
+#| msgid "Remove SMTP configuration"
+msgid "Remove SMTP Settings"
+msgstr "Удалить настройки SMTP"
+
+#, fuzzy
 #| msgid ""
 #| "\n"
 #| "          Removing your SMTP configuration will result in emails being delivered from %(brand)s that cannot be replied to. Are you sure you want to continue?\n"
 #| "        "
-msgid "Removing your SMTP configuration will result in emails being delivered from %(brand)s that cannot be replied to. Are you sure you want to continue?"
+msgid "Removing these settings will prevent emails being sent from flows. Are you sure you want to continue?"
 msgstr ""
 "\n"
 "          Удаление Ваших настроек SMTP приведет к доставке электронных писем от %(brand)s, на которые невозможно будет ответить. Вы уверены что хотите продолжить?\n"
