--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-31 22:03+0000\n"
+"POT-Creation-Date: 2021-04-02 17:41+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -2667,8 +2667,8 @@ msgstr ""
 msgid "Start Flow"
 msgstr "Начать поток"
 
-msgid "Download Results"
-msgstr "Скачать Результаты"
+msgid "Results"
+msgstr "Результаты"
 
 msgid "Edit Flow"
 msgstr "Редактировать Поток"
@@ -2748,6 +2748,9 @@ msgstr "В свой экспорт Вы можете включить тольк
 #, python-brace-format
 msgid "You can only include up to {ExportFlowResultsTask.MAX_GROUP_MEMBERSHIPS_COLS} groups for group memberships in your export"
 msgstr "В свой экспорт Вы можете включить только до {ExportFlowResultsTask.MAX_GROUP_MEMBERSHIPS_COLS} групп для членства групп"
+
+msgid "Download Results"
+msgstr "Скачать Результаты"
 
 msgid "Sunday"
 msgstr "Воскресенье"
@@ -5931,9 +5934,6 @@ msgstr ""
 msgid "No matching flows."
 msgstr "Нет соответствующих потоков"
 
-msgid "Results"
-msgstr "Результаты"
-
 msgid "Delete Run"
 msgstr ""
 
@@ -6844,9 +6844,6 @@ msgstr ""
 msgid "Emails sent from flows will be sent from <b>%(from_email)s</b>."
 msgstr ""
 
-msgid "Configure email settings to enable sending of emails from flows."
-msgstr ""
-
 #, python-format
 msgid "You can configure %(brand)s to send emails generated within flows from an email address of your choosing."
 msgstr ""
@@ -6860,7 +6857,8 @@ msgstr ""
 msgid "Remove SMTP Settings"
 msgstr "Удалить настройки SMTP"
 
-msgid "Removing these settings will prevent emails being sent from flows. Are you sure you want to continue?"
+#, python-format
+msgid "Removing these settings will mean that emails sent from flows will come from %(from_email)s. Are you sure you want to continue?"
 msgstr ""
 
 #, python-format
