--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-31 22:03+0000\n"
+"POT-Creation-Date: 2021-04-02 17:41+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Moy Moussan <moymoussan@gmail.com>, 2021\n"
 "Language-Team: Spanish (https://www.transifex.com/rapidpro/teams/226/es/)\n"
@@ -2652,8 +2652,8 @@ msgstr "Eliminar etiqueta"
 msgid "Start Flow"
 msgstr "Empezar flujo"
 
-msgid "Download Results"
-msgstr "Descargar Resultados"
+msgid "Results"
+msgstr "Resultados"
 
 msgid "Edit Flow"
 msgstr "Editar flujo"
@@ -2733,6 +2733,9 @@ msgstr "Solo puede incluir hasta {ExportFlowResultsTask.MAX_CONTACT_FIELDS_COLS}
 #, python-brace-format
 msgid "You can only include up to {ExportFlowResultsTask.MAX_GROUP_MEMBERSHIPS_COLS} groups for group memberships in your export"
 msgstr "Solo puede incluir hasta {ExportFlowResultsTask.MAX_GROUP_MEMBERSHIPS_COLS} grupos para membresías de grupo en su exportación"
+
+msgid "Download Results"
+msgstr "Descargar Resultados"
 
 msgid "Sunday"
 msgstr "domingo"
@@ -5897,9 +5900,6 @@ msgstr "Nueva etiqueta"
 msgid "No matching flows."
 msgstr "Sin flujos que correspondan."
 
-msgid "Results"
-msgstr "Resultados"
-
 msgid "Delete Run"
 msgstr "Eliminar ejecución"
 
@@ -6890,9 +6890,6 @@ msgstr "Crear una cuenta %(brand)s es gratis y solo toma un minuto."
 msgid "Emails sent from flows will be sent from <b>%(from_email)s</b>."
 msgstr "Los correos electrónicos enviados desde flujos provendrán de <b> %(from_email)s </b>."
 
-msgid "Configure email settings to enable sending of emails from flows."
-msgstr ""
-
 #, fuzzy, python-format
 #| msgid "You can configure %(brand)s to send emails generated within flows from an email address of your choosing. <br/> This will let you receive replies from your recipients."
 msgid "You can configure %(brand)s to send emails generated within flows from an email address of your choosing."
@@ -6908,9 +6905,9 @@ msgstr "Si ya no desea utilizar %(from_email)s para enviar correos electrónicos
 msgid "Remove SMTP Settings"
 msgstr "Eliminar la configuración de SMTP"
 
-#, fuzzy
+#, fuzzy, python-format
 #| msgid "Removing your SMTP configuration will result in emails being delivered from %(brand)s that cannot be replied to. Are you sure you want to continue?"
-msgid "Removing these settings will prevent emails being sent from flows. Are you sure you want to continue?"
+msgid "Removing these settings will mean that emails sent from flows will come from %(from_email)s. Are you sure you want to continue?"
 msgstr "Si elimina su configuración SMTP, los correos electrónicos se entregarán desde %(brand)s a los que no se podrá responder. Estás seguro de que quieres continuar?"
 
 #, python-format
